learn-by-example/java-servlet/kubernetes/servlet.yaml
apiVersion: v1
kind: Pod
metadata:
  name: servlet-tomcat
  labels:
    app.kubernetes.io/name: servlet
spec:
  containers:
  - name: servlet
    image: yaalexf/servlet:tomcat
    imagePullPolicy: Always
    resources:
      requests:
        memory: "144Mi"
        cpu: "20m"
      limits:
        memory: "256Mi"
        cpu: "1000m"
---
apiVersion: v1
kind: Pod
metadata:
  name: servlet-jetty
  labels:
    app.kubernetes.io/name: servlet
spec:
  containers:
  - name: servlet
    image: yaalexf/servlet:jetty
    imagePullPolicy: Always
    resources:
      requests:
        memory: "136Mi"
        cpu: "20m"
      limits:
        memory: "256Mi"
        cpu: "1000m"
---
apiVersion: v1
kind: Pod
metadata:
  name: servlet-wildfly
  labels:
    app.kubernetes.io/name: servlet
spec:
  containers:
  - name: servlet
    image: yaalexf/servlet:wildfly
    imagePullPolicy: Always
    resources:
      requests:
        memory: "384Mi"
        cpu: "20m"
      limits:
        memory: "512Mi"
        cpu: "1000m"
---
kind: Service
apiVersion: v1
metadata:
  name: servlet
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: servlet
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servlet
spec:
  rules:
  - http:
      paths:
      - path: /servlet
        pathType: Prefix
        backend:
          service:
            name: servlet
            port:
              number: 80
